--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@
 h1, h2, h3, h4, h5 {
   margin-top: 1.5em;
 }
+.abstract-machine {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 800px;
+}
